# habitat-loop-engine

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CODEOWNERS.md  Cargo.toml  HARNESS_CONTRACT.md  MASTER_INDEX.md  QUALITY_BAR.md  QUICKSTART.md  README.md  SHA256SUMS.txt  ULTRAMAP.md  bacon.toml  plan.toml
.claude/: LOCAL_RULES.md  PROJECT_CONTEXT.md  context.json
ai_docs/: CLUSTERED_MODULES.md  CODE_MODULE_MAP.md  INDEX.md
ai_specs/: INDEX.md  S01_SYSTEM_OVERVIEW_AND_AUTHORITY_BOUNDARY.md  S02_WORKFLOW_DEFINITION_MODEL.md  S03_EXECUTOR_STATE_MACHINE.md  S04_VERIFIER_AND_RECEIPT_AUTHORITY.md  S05_PERSISTENCE_LEDGER_AND_SQLITE_SCHEMA.md  S06_CLI_AND_LOCAL_OPERATION_SURFACE.md  S07_ANTI_USE_PATTERN_INTELLIGENCE.md  S08_ATUIN_QI_VERIFICATION_CHAIN.md  S09_DEVOPS_V3_READ_ONLY_INTEGRATION.md  S10_RUNBOOK_SEMANTICS_AND_AWAITING_HUMAN_FSM.md  S11_ORCHESTRATOR_ZELLIJ_HANDOFF_DISCIPLINE.md  S12_RUNTIME_LOOP_AND_ROLLBACK_SEMANTICS.md  S13_JSONL_SUBSTRATE_INTEGRATION_CONTRACT.md
crates/hle-bridge/: Cargo.toml
crates/hle-bridge/src/: atuin_qi_bridge.rs  bridge_contract.rs  devops_v3_probe.rs  lib.rs  stcortex_anchor_bridge.rs  watcher_notice_writer.rs  zellij_dispatch.rs
crates/hle-cli/: Cargo.toml
crates/hle-cli/src/: args.rs  audit.rs  daemon_once.rs  main.rs  run.rs  scan.rs  status.rs  taxonomy.rs  verify.rs
crates/hle-core/: Cargo.toml
crates/hle-core/src/: lib.rs
crates/hle-core/src/authority/: claim_authority.rs  mod.rs
crates/hle-core/src/evidence/: claims_store.rs  mod.rs  receipt_hash.rs
crates/hle-core/src/state/: mod.rs  workflow_state.rs
crates/hle-core/src/testing/: mod.rs  test_taxonomy.rs
crates/hle-runbook/: Cargo.toml
crates/hle-runbook/src/: human_confirm.rs  incident_replay.rs  lib.rs  manual_evidence.rs  parser.rs  phase_map.rs  safety_policy.rs  scaffold.rs  schema.rs
crates/hle-storage/: Cargo.toml
crates/hle-storage/src/: anti_pattern_events.rs  blockers_store.rs  evidence_store.rs  lib.rs  migrations.rs  pool.rs  receipts_store.rs  verifier_results_store.rs  workflow_runs.rs  workflow_ticks.rs
crates/hle-verifier/: Cargo.toml
crates/hle-verifier/src/: anti_pattern_scanner.rs  claim_authority_verifier.rs  false_pass_auditor.rs  final_claim_evaluator.rs  lib.rs  receipt_sha_verifier.rs  test_taxonomy_verifier.rs
docs/: SCRIPT_SPEC_PREDICATE_MAP.md
etc/: README.md
examples/: workflow.example.toml
local-ci/: scaffold.yml
migrations/: 0001_scaffold_schema.sql  0002_m028_m029_m030_m031.sql
runbooks/: INDEX.md  m0-authorization-boundary.md  scaffold-verification.md  verification-and-sync-pipeline.md
schemas/: plan.schema.json  receipt.schema.json  status.schema.json
schematics/: INDEX.md  anti-pattern-decision-tree.md  atuin-qi-chain.md  devops-v3-integration-flow.md  executor-verifier-sequence.md  layer-dag.md  module-graph.md  receipt-graph.md  runbook-awaiting-human-fsm.md  sqlite-er.md  system-overview.md  zellij-orchestrator-deployment-flow.md
scripts/: kanban-hle-workflow-monitor.py  quality-gate.sh  verify-antipattern-registry.sh  verify-bin-wrapper-parity.sh  verify-bounded-logs.sh  verify-claude-folder.sh  verify-doc-links.sh  verify-sync.sh  (+16 more)
(+192 files in other folders)
