[package]
name = "hle-bridge"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
substrate-types = { path = "../substrate-types" }
hle-core = { path = "../hle-core" }
hle-storage = { path = "../hle-storage" }
ureq = { version = "2", default-features = false }

[lints]
workspace = true
