[package]
name = "hle-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "hle"
path = "src/main.rs"

[dependencies]
substrate-types = { path = "../substrate-types" }
substrate-verify = { path = "../substrate-verify" }
substrate-emit = { path = "../substrate-emit" }
hle-core = { path = "../hle-core" }
hle-executor = { path = "../hle-executor" }
hle-verifier = { path = "../hle-verifier" }
hle-storage = { path = "../hle-storage" }

[lints]
workspace = true
